src/scss/_partials/_card.scss
.card {
	text-align: center;
	vertical-align: top;
	z-index: 100;

	.card-header {
		display:block;
		padding: 15px 0 25px;
		
		.card-title {
			color: #000;
			cursor: pointer;
			font-size: 0.941176471em;
			font-weight: bold;
		}
		
		.card-sub-title {
			color: $light-gray;
			font-size: 0.823529412em;
			margin-top: 5px;

			.icon-marker {
				margin-right: 5px;
			}
		}

		.send-message-button {
			float: right;
			margin-right: 4%;
			margin-top: -50px;
		}
	}
	.card-icons {
		.absolute-wrapper {
			margin: -17.5px auto -17.5px auto;
			position: absolute;
			text-align: center;
			width: 100%;
			z-index: 11111;

			.icon-wrapper {
				margin: 0 5px 0 5px !important;
				vertical-align: top;

				.icon-web-site {
					font-size: 2.5em !important;
					line-height: 33px !important;
				}
				.icon-photo {
					font-size: 1.3em !important;
				}
				.icon-video {
					font-size: 1.2em !important;
				}
				.icon-youtube {
					font-size: 2.5em !important;
				}
				.icon-audio {
					font-size: 1.3em !important;
				}
				.icon-twitter {
					font-size: 2.2em !important;
				}
				.icon-spotify {
					font-size: 2.5em !important;
				}
				.icon-facebook {
					font-size: 2.5em !important;
				}
			}

			.link-icon-wrapper {
				background-color: $orange-link !important;
			}

			.spotify-icon-wrapper {
				background-color: $spotify-green !important;
			}

			.twitter-icon-wrapper {
				background-color: $twitter-blue !important;
			}

			.youtube-icon-wrapper {
				background-color: $youtube-red !important;
			}

			.facebook-icon-wrapper {
				background-color: $facebook-blue !important;
			}
		}
	}
	.card-content {
		cursor: pointer;

		.card-content-inner {
			min-height: 50px;
			padding: 0;
			overflow-x: hidden;

			.discover-video {
				width: 100%;
			}
			.image img {
				width: 100%;
				vertical-align: middle;
			}
			.image.fixed-max-height-image {
				max-height: 500px;
				overflow: hidden;
			}
			.matching {
				margin-top: -32px;
				position: relative;

				.matching-value {
					color: #fff;
					margin-bottom: 5px;
				}
			}
		}
	}

	.card-footer {
		display: block;
		.like-button {
			margin-left: -5px;
			margin-right: 15px;
			.yellow {
				color: $material-yellow !important;
			}
		}
	}

	&.person-card {
		.card-header {
			.online-status {
				font-size: 0.8em;
				color: $light-green;
				font-weight: bold;
			}
		}
		.card-content {
			.card-content-inner {
				.matching {
					margin-top: -7px;
				}
			}
		}
		.card-footer {
			.like-icon-container {
				color: #fff;
				margin: auto;

				.icon-star {
					vertical-align: middle;

					&:before {
						font-size: 1.3em;
					}
				}
			}
			.matching-value {
				color: $regular-gray;
				display: inline-flex;
				font-weight: bold;
				margin: auto;
				width: 100%;

				.matching-string {
					display: inline-block;
					margin: auto;
					white-space: nowrap;
					overflow: hidden;
					text-overflow: ellipsis;
				}
				.matching-percentage {
					display: inline-block;
					margin: auto;
					width: 31px;
				}
			}

			&.liked {
				background: $material-orange-light;
			}

			&::before {
				height: 0;
			}
		}
	}
}

